@@ -4,6 +4,7 @@
 * Cleaned up service.tac.
 * Updated admin defs.sh.
 * Added placeholder setup.py.
+* Moved Dspam code into util module.
 
 2009.01.06
 
